eric feedback on realtime

--- a/docs/howtos/solutions/real-time-inventory/available-to-promise/index-rti-available-to-promise.mdx
+++ b/docs/howtos/solutions/real-time-inventory/available-to-promise/index-rti-available-to-promise.mdx
@@ -24,7 +24,7 @@ import GeneralAdditionalResources from '../common-rti/additional-resources.mdx';
 
 ## What is available-to-promise (ATP)?
 
-The major requirement in a **Real time inventory system** is presenting an accurate, real-time view of inventory to shoppers and store associates enabling buy-online-pickup-in-store (BOPIS). Optimizing fulfillment from multiple inventory locations.
+The major requirement in a **retail inventory system** is presenting an accurate, real-time view of inventory to shoppers and store associates enabling buy-online-pickup-in-store (BOPIS). Optimizing fulfillment from multiple inventory locations.
 
 **Available to promise (ATP)** is the projected amount of inventory left available to sell, not including allocated inventory. It allows businesses to control distribution to their customers and predict inventory. The ATP model helps retailers keep inventory costs down such as ordering costs, carrying costs and stock-out costs. ATP is helpful as long as consumer buying forecasts remain correct. Implementing ATP processes effectively for retailers can mean the difference between sustained growth and an inventory that repeatedly runs out of customer's favorite products missing sales opportunities and harming customer experience.
 
@@ -54,13 +54,13 @@ This formula includes the following elements:
 
 - **Cost efficiency at scale**: Redis Enterprise offers real-time, bi-directional consistency between stores and data integration capabilities with enterprise systems without the complexity and costs of managing message brokers, auditing, and reconciliation.
 
-## Realtime inventory with Redis
+## Real time inventory with Redis
 
-![atp](./images/atp.png)
+![atp](./images/atp2.png)
 
 Using Redis, System delivers real-time synchronization of inventory across stores, in transit and warehouses. Provide retailers the most accurate, timely data on inventory across their entire store network and consumers positive customer experiences searching and locating inventory.
 
-Redis Data Integration (RDI) capabilities enable accurate real-time inventory management and system of record synchronization. Redis advanced inventory query and search capabilities provide accurate available inventory information to multichannel and omnichannel customers and store associates.
+Redis Data Integration (RDI) capabilities enable accurate real-time inventory management and system of record synchronization. Redis advanced inventory search and query capabilities provide accurate available inventory information to multichannel and omnichannel customers and store associates.
 
 This solution increases inventory turnover ratios resulting in lower inventory costs, higher revenue and profits. It also reduces the impact of customer searches on Systems of Record and Inventory Management Systems (IMS).
 
@@ -68,7 +68,7 @@ This solution increases inventory turnover ratios resulting in lower inventory c
 
 <RealTimeInventoryCustomerProofs />
 
-## Building a realtime inventory service with redis
+## Building a real time inventory service with redis
 
 <RealTimeInventorySourceCode />
 
@@ -105,13 +105,13 @@ Managing inventory or a **SKU (stock keeping unit)** process contains some activ
 
 <DecrementManySKUs />
 
-## Ready to use Redis in Realtime inventory system?
+## Ready to use Redis in a Real time inventory system?
 
-Hopefully, this tutorial has helped you visualize how to use Redis in a Realtime inventory system for product availability across different location stores. For additional resources related to this topic, check out the links below:
+Hopefully, this tutorial has helped you visualize how to use Redis in a Real time inventory system for product availability across different location stores. For additional resources related to this topic, check out the links below:
 
 ### Additional resources
 
-- Realtime inventory with Redis
-  - [Real-time Local Inventory Search](/howtos/solutions/real-time-inventory/local-inventory-search)
+- Real time inventory with Redis
+  - [Real time Local Inventory Search](/howtos/solutions/real-time-inventory/local-inventory-search)
 - General
   <GeneralAdditionalResources />
