--- a/docs/develop/node/node-crash-course/checkinswithstreams/index-checkinswithstreams.mdx
+++ b/docs/develop/node/node-crash-course/checkinswithstreams/index-checkinswithstreams.mdx
@@ -141,7 +141,7 @@ Then use Postman to POST a checkin. In Postman, open a new request, configure it
 
 ![Checkin Test with Postman](images/xrevrange_checkin_test.png)
 
-Now when you refresh `http://localhost:8081/checkins/latest` in your browser, the values shown should match those that you supplied in Postman.
+Now when you refresh `http://localhost:8081/api/checkins/latest` in your browser, the values shown should match those that you supplied in Postman.
 
 ## External Resources
 
