/operate/provisioning/terraform debranded

--- a/docs/operate/provisioning/terraform/index-terraform.mdx
+++ b/docs/operate/provisioning/terraform/index-terraform.mdx
@@ -406,7 +406,8 @@ Apply complete! Resources: 3 added, 0 changed, 0 destroyed.
 
 You can now verify the new database created under Subscription named “db-json.”
 
-Deploy a Redis Database with RedisJSON modules on AWS using Terraform:
+Deploy a Redis Database with JSON and [other]([Redis Stack](https://redis.io/docs/stack/about/)
+) features on AWS using Terraform:
 
 ```
 terraform {
