--- a/docs/operate/provisioning/azure-cache-terraform/index-azure-cache-terraform.mdx
+++ b/docs/operate/provisioning/azure-cache-terraform/index-azure-cache-terraform.mdx
@@ -12,10 +12,11 @@ The Enterprise Tiers of Azure Cache for Redis are generally available as a nativ
 - [Active geo-replication, with up to 99.999% availability](https://redis.com/redis-enterprise/technology/active-active-geo-distribution/) - Preview
 - [Redis on Flash (RoF)](https://redis.com/redis-enterprise/technology/redis-on-flash/)
 - [Disk persistence with recovery](https://redis.com/redis-enterprise/technology/durable-redis/) - Preview
-- Redis Enterprise modules:
-  - [RediSearch 2.0](https://redis.com/blog/redisearch-2-build-modern-applications-interactive-search/)
-  - [RedisTimeSeries](https://redis.com/modules/redis-timeseries/)
-  - [RedisBloom](https://redis.com/modules/redis-bloom/)
+- Redis Enterprise features:
+  - [Search and Query](https://redis.com/blog/redisearch-2-build-modern-applications-interactive-search/)
+  - [TimeSeries data model](https://redis.com/modules/redis-timeseries/)
+  - [Probabilistic data model](https://redis.com/modules/redis-bloom/)
+  - More feature details at [Redis Stack](https://redis.io/docs/stack/about/)
 - Scaling
   - Datasets up to 13TB
   - Up to 2M concurrent client connections
