--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -26,15 +26,15 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis. N
 <div class="col">
   <RedisCard
     title="Shopping Cart"
-    description="Implementing a Shopping Cart using NodeJS & RedisJSON"
+    description="Implementing a Shopping Cart using NodeJS & Redis"
     page="/howtos/shoppingcart/"
   />
 </div>
 
  <div class="col">
     <RedisCard
-        title="Movies Database using RediSearch"
-        description="How to search and list Movies database using RediSearch"
+        title="Movies Database using Redis"
+        description="How to search and list Movies database using Redis"
         page="/howtos/moviesdatabase/getting-started"
         />
  </div>
@@ -88,7 +88,7 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis. N
  <div class="col">
     <RedisCard
         title="Redis Popup Store"
-        description="How to build a Popup Store using RedisGears and RedisTimeSeries"
+        description="How to build a Popup Store using Redis features like Triggers/ Functions and Time Series data model"
         page="/howtos/popupstore"
         />
  </div>
@@ -99,23 +99,23 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis. N
 <div class="col">
   <RedisCard
     title="Hackernews Clone"
-    description="Building a Hackernews Clone using RedisJSON and RediSearch"
+    description="Building a HackerNews Clone using Redis JSON, Search and Query features"
     page="/howtos/hackernews"
   />
 </div>
 
 <div class="col">
   <RedisCard
-    title="Pipeline for Natural Language Processing using RedisGears"
-    description="How to build a pipeline for  Natural Language Processing using RedisGears"
+    title="Pipeline for Natural Language Processing using Redis Triggers and Functions"
+    description="How to build a pipeline for  Natural Language Processing using Redis Triggers and Functions"
     page="/howtos/nlp"
   />
 </div>
 
  <div class="col">
     <RedisCard
-        title="Movies database using RedisGraph"
-        description="How to build Movies database using RedisGraph & NodeJS"
+        title="Movies database (Graph) using Redis"
+        description="How to build Movies database (Graph) using Redis & NodeJS"
         page="/howtos/redisgraphmovies"
         />
  </div>
@@ -125,8 +125,8 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis. N
 
 <div class="col">
   <RedisCard
-    title="Building a Social Network Application using RediSearch"
-    description="How to Build a Social Network Application using RediSearch and NodeJS"
+    title="Building a Social Network Application using Redis Search and Query features"
+    description="How to Build a Social Network Application using Redis and NodeJS"
     page="/howtos/socialnetwork"
   />
 </div>
@@ -147,24 +147,24 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis. N
 
 <div class="col">
   <RedisCard
-    title="Redisearch Tutorial"
-    description="Getting Started with Redisearch"
+    title="Redis Search and Query Tutorial"
+    description="Getting Started with Redis Search and Query features"
     page="/howtos/redisearch"
   />
 </div>
 
 <div class="col">
   <RedisCard
-    title="RedisJSON Tutorial"
-    description="Getting Started with RedisJSON"
+    title="Redis JSON Tutorial"
+    description="Getting Started with Redis JSON feature"
     page="/howtos/redisjson"
   />
 </div>
 
 <div class="col">
     <RedisCard
-        title="RedisTimeSeries Tutorial"
-        description="Getting Started with RedisTimeSeries"
+        title="Redis Time Series Tutorial"
+        description="Getting Started with Redis Time Series data model"
         page="/howtos/redistimeseries"
         />
  </div>
@@ -174,24 +174,24 @@ This page holds a catalog with dozens of ready-to-use app listings from Redis. N
 
 <div class="col">
   <RedisCard
-    title="RedisGraph Tutorial"
-    description="Getting Started with RedisGraph"
+    title="Redis Graph Tutorial"
+    description="Getting Started with Redis Graph"
     page="/howtos/redisgraph"
   />
 </div>
 
 <div class="col">
   <RedisCard
-    title="RedisBloom Tutorial"
-    description="Getting Started with RedisBloom"
+    title="Redis Probabilistic data model Tutorial"
+    description="Getting Started with Redis Probabilistic data model"
     page="/howtos/redisbloom"
   />
 </div>
 
 <div class="col">
   <RedisCard
-    title="RedisGears Tutorial"
-    description="Getting Started with RedisGears"
+    title="Redis Triggers and Functions Tutorial"
+    description="Getting Started with Redis Triggers and Functions"
     page="/howtos/redisgears"
   />
 </div>
