edits to real-time inventory search doc

--- a/docs/howtos/solutions/real-time-inventory/common-rti/rti-challenges.mdx
+++ b/docs/howtos/solutions/real-time-inventory/common-rti/rti-challenges.mdx
@@ -1,9 +1,9 @@
-- **Over and under-stocking** : While adopting multi-channel business model (online & in store), lack of inventory visibility results in over and under-stocking of inventory at different regional levels
+- **Over and under-stocking**: While adopting a multi-channel business model (online & in store), lack of inventory visibility results in over and under-stocking of inventory in different regions and stores.
 
-- Consumers **seek convenience** : The ability to search across regional store locations and pickup merchandise **immediately** rather than wait for shipping
+- Consumers **seek convenience**: The ability to search across regional store locations and pickup merchandise **immediately** rather than wait for shipping is a key differentiator for retailers.
 
-- Consumers **seek speed** : All retailers, even small family-run, must compete against the **customer experience** of online retailers: Alibaba, FlipKart, Shopee, and Amazon.
+- Consumers **seek speed**: All retailers, even small or family-run, must compete against the **customer experience** of large online retailers like Alibaba, FlipKart, Shopee, and Amazon.
 
-- **High inventory costs** : Retailers seek to lower inventory costs by eliminating missed sales from stock-out scenarios which also leads to higher “inventory turnover ratios”
+- **High inventory costs**: Retailers seek to lower inventory costs by eliminating missed sales from out-of-stock scenarios which also leads to higher “inventory turnover ratios.”
 
-- **Brand value** : Inaccurate store inventory counts lead to frustrated customers and lower sales. The operational pain will **impact of status quo**.
+- **Brand value**: Inaccurate store inventory counts lead to frustrated customers and lower sales. The operational pain will **impact the status quo**.
