Real-time Inventory cards in overview page

--- a/docs/howtos/solutions/index-solutions.mdx
+++ b/docs/howtos/solutions/index-solutions.mdx
@@ -111,3 +111,24 @@ Learn how to easily build, test and deploy code for common microservice and cach
 </div>
 
 </div>
+
+## Real-time Inventory
+
+<div class="row">
+ <div class="col">
+  <RedisCard
+    title="Available to Promise"
+    description="Available to Promise in Real-time Inventory Using Redis"
+    page="/howtos/solutions/real-time-inventory/available-to-promise"
+  />
+</div>
+
+<div class="col">
+  <RedisCard
+    title="Real-time Local Inventory Search (GeoSpatial)"
+    description="Real-time Local Inventory Search Using Redis"
+    page="/howtos/solutions/real-time-inventory/local-inventory-search"
+  />
+</div>
+
+</div>
