/howtos/redisjson/ debranded

--- a/docs/howtos/redisjson/index-redisjson.mdx
+++ b/docs/howtos/redisjson/index-redisjson.mdx
@@ -1,13 +1,13 @@
 ---
 id: index-redisjson
-title: RedisJSON Tutorial
+title: Redis JSON Tutorial
 sidebar_label: Overview
 slug: /howtos/redisjson/
 ---
 
 import RedisCard from '@theme/RedisCard';
 
-The following links provides you with the available options to get started with RedisJSON
+The following links provides you with the available options to get started with Redis JSON feature
 
 <div class="row">
 
@@ -23,7 +23,7 @@ The following links provides you with the available options to get started with 
 
 <div class="col">
   <RedisCard
-    title="RedisJSON and Python"
+    title="Redis JSON and Python"
     description="How to store JSON documents in Redis with Python"
     page="/howtos/redisjson/using-python"
   />
@@ -31,7 +31,7 @@ The following links provides you with the available options to get started with 
 
 <div class="col">
   <RedisCard
-    title="RedisJSON and NodeJS"
+    title="Redis JSON and NodeJS"
     description="How to cache JSON data in Redis with NodeJS"
     page="/howtos/redisjson/using-nodejs"
   />
@@ -43,7 +43,7 @@ The following links provides you with the available options to get started with 
 
 <div class="col">
   <RedisCard
-    title="RedisJSON and Ruby"
+    title="Redis JSON and Ruby"
     description="How to cache JSON data in Redis with Ruby"
     page="/howtos/redisjson/using-ruby"
   />
@@ -51,7 +51,7 @@ The following links provides you with the available options to get started with 
 
 <div class="col">
   <RedisCard
-    title="RedisJSON and Go"
+    title="Redis JSON and Go"
     description="How to cache JSON data in Redis with Go"
     page="/howtos/redisjson/using-go"
   />
@@ -59,7 +59,7 @@ The following links provides you with the available options to get started with 
 
  <div class="col">
     <RedisCard
-        title="RedisJSON and Java"
+        title="Redis JSON and Java"
         description="How to cache JSON data in Redis with Java"
         page="/howtos/redisjson/using-java"
         />
@@ -86,8 +86,8 @@ The following links provides you with the available options to get started with 
 
   <div class="col">
     <RedisCard
-        title="How to index JSON documents using RediSearch"
-        description="How to index JSON document using RedisJSON & RediSearch"
+        title="How to index JSON documents using Redis"
+        description="How to index JSON document using Redis"
         page="/howtos/redisjson/jsonind-document"
         />
   </div>
@@ -97,16 +97,16 @@ The following links provides you with the available options to get started with 
 
 <div class="col">
   <RedisCard
-    title="RedisJSON Cheatsheet"
-    description="Basic RedisJSON commands"
+    title="Redis JSON CheatSheet"
+    description="Basic Redis JSON commands"
     page="/howtos/redisjson/redisjson-cheatsheet"
   />
 </div>
 
 <div class="col">
   <RedisCard
-    title="Shopping Cart using RedisJSON"
-    description="Implementing a Shopping Cart using NodeJS & RedisJSON"
+    title="Shopping Cart using Redis JSON"
+    description="Implementing a Shopping Cart using NodeJS & Redis"
     page="/howtos/redisjson/shoppingcart/"
   />
 </div>
