--- a/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/redisjson/getting-started/index-gettingstarted.mdx
@@ -38,7 +38,7 @@ click "Create a custom database" option shown in the image.
 
 ### Step 3. Verify the database details
 
-You will be provided with Public endpoint URL and "Redis Stack" as the type of database with the list of modules that comes by default.
+You will be provided with Public endpoint URL and "Redis Stack" as the type of database with the list of features that comes by default.
 
 ![verify database](details_database.png)
 
@@ -59,11 +59,11 @@ Add the Redis Enterprise cloud database endpoint, port and password.
 
 ![database details](database_details.png)
 
-### Step 7. Getting Started with RedisJSON
+### Step 7. Getting Started with Redis JSON
 
-The following steps use some basic RedisJSON commands. You can run them from the Redis command-line interface (redis-cli) or use the CLI available in RedisInsight.
+The following steps use some basic Redis JSON commands. You can run them from the Redis command-line interface (redis-cli) or use the CLI available in RedisInsight.
 
-To interact with RedisJSON, you will most often use the JSON.SET and JSON.GET commands. Before using RedisJSON, you should familiarize yourself with its commands and syntax as detailed in the documentation: RedisJSON Commands.
+To interact with Redis JSON, you will most often use the JSON.SET and JSON.GET commands. Before using Redis JSON, you should familiarize yourself with its commands and syntax as detailed in the documentation: Redis JSON Commands.
 
 Let’s go ahead and test drive some JSON-specific operations for setting and retrieving a Redis key with a JSON value:
 
@@ -74,7 +74,7 @@ Let’s go ahead and test drive some JSON-specific operations for setting and re
 
 #### Scalar
 
-Under RedisJSON, a key can contain any valid JSON value. It can be scalar, objects or arrays. JSON scalar is basically a string. You will have to use the JSON.SET command to set the JSON value. For new Redis keys the path must be the root, so you will use “.” path in the example below. For existing keys, when the entire path exists, the value that it contains is replaced with the JSON value. Here you will use JSON.SET to set the JSON scalar value to “Hello JSON!” Scalar will contain a string that holds “Hello JSON!”
+Under Redis JSON, a key can contain any valid JSON value. It can be scalar, objects or arrays. JSON scalar is basically a string. You will have to use the JSON.SET command to set the JSON value. For new Redis keys the path must be the root, so you will use “.” path in the example below. For existing keys, when the entire path exists, the value that it contains is replaced with the JSON value. Here you will use JSON.SET to set the JSON scalar value to “Hello JSON!” Scalar will contain a string that holds “Hello JSON!”
 
 <b>Command</b>:
 
@@ -126,7 +126,7 @@ JSON.SET employee_profile $ '{ "employee": { "name": "alpha", "age": 40,"married
 
 :::note
 
-Please note that the above command works for 2.0+ release of RedisJSON. If you are using the older version of RedisJSON, you can replace "$" with "."
+Please note that the above command works for 2.0+ release of Redis JSON. If you are using the older version of Redis JSON, you can replace "$" with "."
 
 :::
 
@@ -271,8 +271,8 @@ A JSON object can also have another object. Here is a simple example of a JSON o
 ### Next Steps
 
 - [RU204: Storing, Querying and Indexing JSON at Speed](https://university.redis.com/courses/ru204/) - a course at Redis University
-- Learn more about [RedisJSON](https://oss.redis.com/redisjson/) in the Quickstart tutorial.
-- [How to build shopping cart app using NodeJS and RedisJSON](/howtos/shoppingcart)
+- Learn more about [Redis JSON](https://oss.redis.com/redisjson/) in the QuickStart tutorial.
+- [How to build shopping cart app using NodeJS and Redis JSON](/howtos/shoppingcart)
 - [Indexing, Querying, and Full-Text Search of JSON Documents with Redis](https://redis.com/blog/index-and-query-json-docs-with-redis/)
 
 ##
