--- a/docs/howtos/redisjson/using-python/index-usingpython.mdx
+++ b/docs/howtos/redisjson/using-python/index-usingpython.mdx
@@ -1,11 +1,11 @@
 ---
 id: index-usingpython
 title: How to store JSON documents in Redis with Python
-sidebar_label: RedisJSON and Python
+sidebar_label: Redis JSON and Python
 slug: /howtos/redisjson/using-python
 ---
 
-[RedisJSON](https://oss.redis.com/redisjson/) is a source-available Redis module that lets you store, manipulate, and query JSON documents in Redis. The standard Redis Python client (v4.0 or greater) supports all of the features of RedisJSON, and in this tutorial, we'll see how to get started with them.
+[Redis JSON](https://oss.redis.com/redisjson/) is a source-available Redis feature that lets you store, manipulate, and query JSON documents in Redis. The standard Redis Python client (v4.0 or greater) supports all of the features of Redis JSON, and in this tutorial, we'll see how to get started with them.
 
 ### Step 1. Create a free Cloud account
 
@@ -31,7 +31,7 @@ click "Create a custom database" option shown in the image.
 
 ### Step 3. Verify the database details
 
-You will be provided with Public endpoint URL and "Redis Stack" as the type of database with the list of modules that comes by default.
+You will be provided with Public endpoint URL and "Redis Stack" as the type of database with the list of features that comes by default.
 
 ![verify database](images/details_database.png)
 
@@ -86,7 +86,7 @@ Installing collected packages: async-timeout, typing-extensions, wrapt, deprecat
     Successfully installed async-timeout-4.0.2 deprecated-1.2.13 redis-4.2.0 typing-extensions-4.1.1 wrapt-1.14.0
 ```
 
-Here's the Python code to store this document in Redis using RedisJSON:
+Here's the Python code to store JSON document in Redis:
 
 ```python
 import redis
@@ -133,7 +133,7 @@ localhost:6379> json.get person:1
 
 ## Fetching specific fields from a JSON document
 
-You can use RedisJSON to fetch specific fields from a document by specifying a path. For example, here's how to return only the `name` field:
+You can use Redis to fetch specific fields from a JSON document by specifying a path. For example, here's how to return only the `name` field:
 
 ```python
 name = client.json().get('person:1', Path('.name'))
@@ -153,4 +153,4 @@ localhost:6379> json.get person:1 '.name'
 
 - [RU204: Storing, Querying and Indexing JSON at Speed](https://university.redis.com/courses/ru204/) - a course at Redis University
 - [Importing JSON data into Redis using NodeJS](/howtos/redisjson/using-nodejs)
-- Learn more about [RedisJSON](https://redisjson.io) in the Quickstart tutorial
+- Learn more about [Redis JSON](https://redisjson.io) in the QuickStart tutorial
