/develop/java/redis-and-spring-course/lesson_7 debranded

--- a/docs/develop/java/spring/redis-and-spring-course/lesson_7/index-lesson_7.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_7/index-lesson_7.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-lesson_7
-title: 'Search with RediSearch'
-sidebar_label: Search w/ RediSearch
+title: Search with Redis
+sidebar_label: Search w/ Redis
 slug: /develop/java/redis-and-spring-course/lesson_7
 authors: [bsb]
 ---
